--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <div class="container" style=" padding: 50px; align-items: center;">
         <div style="margin-left: auto; margin-right: auto; background-color: aqua;">
             <h1 style=" width: 50%; margin-left: auto; margin-right: auto;"><p>Our Photo Graphy</p> </h1>
+            <p>Vijay</p>
         </div>
         
         <div class="image">
